--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+sympy = "^1.13.2"
 
 [tool.poetry.group.dev.dependencies]
 numpy = "^2.0.1"
